objects/Company_News__c.object
<CustomObject>
    <fields>
        <fullName>Assistance_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assistance Program</label>
        <referenceTo>Assistance_Program__c</referenceTo>
        <relationshipLabel>Company News</relationshipLabel>
        <relationshipName>Company_News</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Crisis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Crisis</label>
        <referenceTo>Crisis__c</referenceTo>
        <relationshipLabel>Company News</relationshipLabel>
        <relationshipName>Company_News</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Posted__c</fullName>
        <label>Date Posted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>News article content. Upload images if you want to it to be Private. Copy &amp; Paste Images to make it Public.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Headline__c</fullName>
        <inlineHelpText>Title of the news article</inlineHelpText>
        <label>Headline</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this box if you want to make this news public to the entire company</inlineHelpText>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <label>Company News</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Company_News</fullName>
        <columns>NAME</columns>
        <columns>Headline__c</columns>
        <columns>Description__c</columns>
        <columns>Date_Posted__c</columns>
        <columns>Public__c</columns>
        <columns>Crisis__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Company News</label>
    </listViews>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>NewsID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>